--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web</title>
-  </head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+
+  <title>
+    SMARK Solutions | Student Projects in Nagercoil | Student Internships in Nagercoil | Software Training in Nagercoil | Software Company in Nagercoil
+  </title>
+
+  <link rel="canonical" href="https://smarksolutions.in/" />
+
+  <!-- Favicon / Logo -->
+ <link rel="icon" type="image/png" href="/logo.png" />
+
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="SMARK Solutions" />
+  <meta name="language" content="en-IN" />
+
+  <!-- SEO -->
+  <meta
+    name="keywords"
+    content="SMARK Solutions, Web Design Company in Kanyakumari, IT Company in Nagercoil, Student Projects in Nagercoil, Student Internships in Nagercoil, Software Training in Nagercoil"
+  />
+
+  <meta
+    name="description"
+    content="SMARK Solutions is a leading software company in Nagercoil offering student internships, projects, software training, web design, web development, ERP systems, and mobile apps."
+  />
+
+  <!-- GEO -->
+  <meta name="geo.region" content="IN-TN" />
+  <meta name="geo.placename" content="Nagercoil" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="SMARK Solutions" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://smarksolutions.in/" />
+  <meta property="og:image" content="https://smarksolutions.in/logo.png" />
+
+  <meta property="og:site_name" content="SMARK Solutions" />
+  <meta
+    property="og:description"
+    content="We provide web & mobile app development, internships, student projects, software training in Nagercoil."
+  />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QPL31MXCEF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-QPL31MXCEF');
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
